// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline.vue pending slot work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\"><i class=\\"ix-icon ix-icon-loading ix-icon-spin\\" role=\\"img\\" arialabel=\\"loading\\"></i></div>
    <div class=\\"ix-timeline-item-content\\">pendingSlotText</div>
  </li>
</ul>"
`;

exports[`Timeline.vue pending slot work 2`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\"><i class=\\"ix-icon ix-icon-loading ix-icon-spin\\" role=\\"img\\" arialabel=\\"loading\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"64 64 896 896\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" fill=\\"currentColor\\" aria-hidden=\\"true\\" data-icon=\\"loading\\">
          <path d=\\"M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z\\"></path>
        </svg></i></div>
    <div class=\\"ix-timeline-item-content\\">pendingSlotText</div>
  </li>
</ul>"
`;

exports[`Timeline.vue pending slot work 3`] = `
"<ul class=\\"ix-timeline ix-timeline-right ix-timeline-reverse\\">
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\"><i class=\\"ix-icon ix-icon-loading ix-icon-spin\\" role=\\"img\\" arialabel=\\"loading\\"></i></div>
    <div class=\\"ix-timeline-item-content\\">pendingSlotText</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
</ul>"
`;

exports[`Timeline.vue pending work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
</ul>"
`;

exports[`Timeline.vue pending work 2`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\"><i class=\\"ix-icon ix-icon-loading ix-icon-spin\\" role=\\"img\\" arialabel=\\"loading\\"></i></div>
    <div class=\\"ix-timeline-item-content\\"></div>
  </li>
</ul>"
`;

exports[`Timeline.vue pending work 3`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\"><i class=\\"ix-icon ix-icon-loading ix-icon-spin\\" role=\\"img\\" arialabel=\\"loading\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"64 64 896 896\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" fill=\\"currentColor\\" aria-hidden=\\"true\\" data-icon=\\"loading\\">
          <path d=\\"M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z\\"></path>
        </svg></i></div>
    <div class=\\"ix-timeline-item-content\\">pendingText</div>
  </li>
</ul>"
`;

exports[`Timeline.vue pending work 4`] = `
"<ul class=\\"ix-timeline ix-timeline-right ix-timeline-reverse\\">
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\"><i class=\\"ix-icon ix-icon-loading ix-icon-spin\\" role=\\"img\\" arialabel=\\"loading\\"></i></div>
    <div class=\\"ix-timeline-item-content\\"></div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
</ul>"
`;

exports[`Timeline.vue pendingDot slot work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\">pendingDotSlotText</div>
    <div class=\\"ix-timeline-item-content\\"></div>
  </li>
</ul>"
`;

exports[`Timeline.vue pendingDot slot work 2`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\">pendingDotSlotText</div>
    <div class=\\"ix-timeline-item-content\\"></div>
  </li>
</ul>"
`;

exports[`Timeline.vue pendingDot work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\"><i class=\\"ix-icon ix-icon-loading ix-icon-spin\\" role=\\"img\\" arialabel=\\"loading\\"></i></div>
    <div class=\\"ix-timeline-item-content\\"></div>
  </li>
</ul>"
`;

exports[`Timeline.vue pendingDot work 2`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right ix-timeline-item-pending\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\">pendingDotText</div>
    <div class=\\"ix-timeline-item-content\\"></div>
  </li>
</ul>"
`;

exports[`Timeline.vue position work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
</ul>"
`;

exports[`Timeline.vue position work 2`] = `
"<ul class=\\"ix-timeline ix-timeline-left\\">
  <li class=\\"ix-timeline-item ix-timeline-item-left\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-left\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-left\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-left\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
</ul>"
`;

exports[`Timeline.vue position work 3`] = `
"<ul class=\\"ix-timeline ix-timeline-alternate\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-left\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-left\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
</ul>"
`;

exports[`Timeline.vue render work 1`] = `"<ul class=\\"ix-timeline ix-timeline-right\\"></ul>"`;

exports[`Timeline.vue reverse work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-right\\">
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">0</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">1</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">2</div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-right\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\"></div>
    <div class=\\"ix-timeline-item-content\\">3</div>
  </li>
</ul>"
`;

exports[`Timeline.vue reverse work 2`] = `"<ul class=\\"ix-timeline ix-timeline-right ix-timeline-reverse\\"></ul>"`;
